# ds1963s-utils

./: CMakeLists.txt  README.md  paper.lyx  refs.bib
src/: .gitignore  1-wire-bus.c  1-wire-bus.h  CMakeLists.txt  Makefile  README  coroutine.c  coroutine.h  debug.h  ds1963s-brute.c  ds1963s-client.c  ds1963s-client.h  ds1963s-common.c  ds1963s-common.h  ds1963s-device.c  ds1963s-device.h  ds1963s-emulator-yaml.c  ds1963s-emulator-yaml.h  ds1963s-emulator.c  ds1963s-error.c  ds1963s-error.h  ds1963s-shell.c  ds1963s-tool-yaml.c  ds1963s-tool-yaml.h  ds1963s-tool.c  ds1963s-tool.h  ds1963s.c  ds1963s.h  ds2480-device.c  ds2480-device.h  ds2480b-device.c  ds2480b-device.h  getput.h  ibutton-brute.c  ibutton.c  ibutton.h  list.h  onewire.c  onewire.h  sha1.c  (+9 more)
src/device/: ds1963s.c  ds1963s.h
src/ibutton/: CMakeLists.txt  crcutil.c  ds2480.h  linuxlnk.c  owfile.h  ownet.h  owsesu.c  owtrnu.c  sha18.c  shaib.c  shaib.h
